update disaster data

--- a/index.html
+++ b/index.html
@@ -17,18 +17,19 @@
 <body>
 
   <!-- Loading Overlay -->
-  <div id="loading-overlay" class="loading-overlay" aria-hidden="true">
+  <!-- <div id="loading-overlay" class="loading-overlay" aria-hidden="true">
     <div class="spinner" aria-hidden="true"></div>
     <p data-ar="جاري التحميل..." data-en="Loading...">جاري التحميل...</p>
   </div>
 
-  <!-- Error Message -->
+  <!-- Error Message 
   <div id="error-message" class="error-message" role="alert" aria-live="polite" style="display:none;">
     <p data-ar="البيانات غير متوفرة—يرجى إعادة التحديث." data-en="Data unavailable—please refresh.">
       البيانات غير متوفرة—يرجى إعادة التحديث.
     </p>
     <button type="button" onclick="location.reload()" data-ar="إعادة التحميل" data-en="Reload">إعادة التحميل</button>
   </div>
+  -->
 
   <!-- ================= HEADER ================= -->
   <header class="header">
