--- a/index.html
+++ b/index.html
@@ -667,9 +667,49 @@
         <section class="reach-section">
           <div class="container">
             <h3 data-ar="برنامج REACH وBRC وMHPSS" data-en="REACH, BRC & MHPSS"></h3>
-            <p data-ar="سيتم إضافة تفاصيل هذا القسم هنا." data-en="Details for this section will be added here.">
-              سيتم إضافة تفاصيل هذا القسم هنا.
-            </p>
+            <div class="container">
+      <h3 data-ar="برنامج REACH و BRC و MHPSS" data-en="REACH, BRC & MHPSS Programs"></h3>
+
+      <!-- REACH -->
+      <h4>برنامج REACH – الرعاية الصحية المجتمعية المرنة والمتساوية:</h4>
+      <p>بدأ تنفيذ البرنامج في يناير 2022 ويستمر حتى 2026، بهدف تحسين وصول الأشخاص والمجتمعات الضعيفة إلى خدمات الرعاية الصحية والدعم النفسي من خلال تعزيز قدرات الجمعية.</p>
+      <ul>
+        <li>تنفيذ ولادات طبيعية مدعومة: 20 حالة في عدن + 12 في إب.</li>
+        <li>دعم المركز الصحي في عدن بالأدوية (بالتنسيق مع اللجنة الدولية).</li>
+        <li>توزيع 14 تابلت على فروع صنعاء، عدن، إب.</li>
+        <li>تنفيذ نظام الشكاوى والمساءلة المجتمعية في 3 فروع.</li>
+        <li>جلسات توعية في مدارس إب: <strong>21,134 مستفيد</strong> (11,416 ذكور – 9718 إناث).</li>
+        <li>زيارة ميدانية لفروع إب وعدن لمتابعة التقييم والاستدامة.</li>
+      </ul>
+
+      <!-- BRC -->
+      <h4>مشروع BRC – بناء الرعاية الصحية المجتمعية المرنة:</h4>
+      <ul>
+        <li>دعم المركز الصحي في حضرموت بالأدوية (وفق معايير اللجنة الدولية).</li>
+        <li>توزيع تابلتات على فروع حضرموت والمحويت.</li>
+        <li>تنفيذ نظام الشكاوى والمساءلة في حضرموت والمحويت.</li>
+        <li>زيارات ميدانية لفروع حضرموت والمحويت لمتابعة وتقييم الخطط.</li>
+      </ul>
+
+      <!-- MHPSS -->
+      <h4>برنامج الصحة النفسية والدعم النفسي الاجتماعي (MHPSS):</h4>
+      <p>من الركائز الأساسية لتخفيف التحديات النفسية والإنسانية التي فرضتها الأزمات. يشمل البرنامج:</p>
+      <ul>
+        <li>تدريب 50 متطوع بالحديدة على مفاهيم الإسعافات النفسية.</li>
+        <li>تدريب 214 عامل صحي على إدارة الضغط في 6 محافظات (شبوة، حجة، إب، ذمار، صنعاء، لحج).</li>
+        <li>ويبينار الاحتراق الوظيفي للمنطقة العربية: 103 مشارك.</li>
+        <li>ويبينار الإسعاف النفسي الأولي للحالات المعقدة: 202 مشارك.</li>
+        <li>ويبينار تطوير الذات لموظفي ومتطوعي الهلال بالتعاون مع البحرين: 74 مشارك.</li>
+      </ul>
+
+      <!-- Training -->
+      <h4>دورات تدريبية متخصصة:</h4>
+      <ul>
+        <li>ورشة حول معايير الإدارة الطبية ومتابعة المراكز: 16 مشارك.</li>
+        <li>ورشة حول نظام الإمبريست لتعزيز متابعة الأدوية: 8 مشاركين.</li>
+        <li>تدريب MCIM لإدارة الحوادث الجماعية – 118 مشارك في أمانة العاصمة والحديدة.</li>
+      </ul>
+    </div>
           </div>
         </section>
       </div>
