--- a/index.html
+++ b/index.html
@@ -1217,9 +1217,156 @@
       <div class="container">
         <h2 class="section-title" data-ar="المياه والإسكان" data-en="Water & Shelter"></h2>
         <div class="content-card">
-          <p data-ar="سيتم إضافة محتوى هذا القسم هنا." data-en="Content for this section will be added here.">
-            سيتم إضافة محتوى هذا القسم هنا.
-          </p>
+          <div class="health-sub-tabs" role="tablist">
+    <button class="health-sub-tab-btn active" id="wash-overview-btn" role="tab"
+      aria-controls="wash-overview" aria-selected="true" tabindex="0"
+      data-health-tab="wash-overview" data-ar="نظرة عامة" data-en="Overview">
+      <img src="Icons/IFRC-icons-colour_Water-and-sanitation-WASH.png" alt="Water Overview" class="wash-tab-icon">
+      <span data-ar="نظرة عامة" data-en="Overview"></span>
+    </button>
+    <button class="health-sub-tab-btn" id="wash-projects-btn" role="tab"
+  aria-controls="wash-projects" aria-selected="false" tabindex="-1"
+  data-health-tab="wash-projects" data-ar="المشاريع" data-en="Projects">
+  <img src="Icons/IFRC-icons-colour_Emergency-response.png" alt="WASH Projects" class="health-tab-icon">
+  <span data-ar="المشاريع" data-en="Projects"></span>
+</button>
+<button class="health-sub-tab-btn" id="wash-koica-btn" role="tab"
+  aria-controls="wash-koica" aria-selected="false" tabindex="-1"
+  data-health-tab="wash-koica" data-ar="مشروع المياه من أجل السلام" data-en="Water for Peace Project">
+  <img src="Icons/IFRC-icons-colour_Peace-and-Conflict.png" alt="KOICA Project Icon" class="health-tab-icon">
+  <span data-ar="مشروع المياه من أجل السلام" data-en="Water for Peace Project"></span>
+</button>
+<button class="health-sub-tab-btn" id="wash-ppp-btn" role="tab"
+  aria-controls="wash-ppp" aria-selected="false" tabindex="-1"
+  data-health-tab="wash-ppp" data-ar="مشروع الشراكة البرامجية" data-en="PPP Project">
+  <img src="Icons/IFRC-icons-colour_Partnership.png" alt="PPP Icon" class="health-tab-icon">
+  <span data-ar="مشروع الشراكة البرامجية" data-en="PPP Project"></span>
+</button>
+
+  </div>
+ 
+
+  <!-- Sub-tab Content -->
+  <div class="health-tab-content active" id="wash-overview" role="tabpanel" aria-labelledby="wash-overview-btn">
+    <section class="wash-overview-section">
+      <div class="container">
+        <h3 data-ar="نظرة عامة على أزمة المياه" data-en="Water Crisis Overview"></h3>
+         <p data-ar="تُمثل أزمة المياه في اليمن أحد التحديات الإنسانية والإنمائية الأكثر إلحاحاً، حيث تفاقمت حدتها نتيجة عوامل مركبة تشمل النمو السكاني المتسارع، وتدهور البنية التحتية، وسوء إدارة الموارد المائية، والتأثيرات المتزايدة للتغير المناخي." 
+   data-en="The water crisis in Yemen is one of the most pressing humanitarian and development challenges, intensified by a combination of factors including rapid population growth, deteriorating infrastructure, poor water resource management, and the increasing impact of climate change.">
+</p>
+
+<p data-ar="وقد أدى الصراع المستمر إلى تفاقم الأزمة من خلال إلحاق أضرار جسيمة بشبكات المياه، وتعطيل أنظمة التوزيع، وتقييد الوصول إلى المصادر الآمنة." 
+   data-en="The ongoing conflict has worsened the crisis by causing severe damage to water networks, disrupting distribution systems, and limiting access to safe water sources.">
+</p>
+
+<p data-ar="وساهم نقص خدمات المياه والإصحاح البيئي في انتشار الأمراض المنقولة بالمياه، مما عمّق من الحالة الإنسانية الحرجة." 
+   data-en="The lack of water and sanitation services has contributed to the spread of waterborne diseases, deepening the humanitarian crisis.">
+</p>
+
+<p data-ar="لذا، تتطلب المعالجة الفاعلة تبني استراتيجيات متكاملة تجمع بين تعزيز البنية التحتية، وترشيد الإدارة، وبناء القدرة على الصمود في وجه التحديات المناخية." 
+   data-en="Effective solutions require integrated strategies that combine infrastructure enhancement, efficient management, and resilience building against climate challenges.">
+</p>
+
+      </div>
+    </section>
+  </div>
+<!-- WASH Projects Sub-Tab -->
+<div class="health-tab-content" id="wash-projects" role="tabpanel" aria-labelledby="wash-projects-btn">
+  <section class="wash-projects-section">
+    <div class="container">
+      <h3 data-ar="المشاريع" data-en="Projects"></h3>
+
+       <h4><span data-ar="أولاً: إنشاء وتأهيل مواقع البنية التحتية لمقر جمعية الهلال الأحمر اليمني وفروعها" data-en="1. Construction and Rehabilitation of YRCS HQ and Branch Infrastructure"></span></h4>
+<ul>
+  <li data-ar="تركيب منظومات طاقة شمسية للمركز الرئيسي." data-en="Installation of solar systems at the main headquarters."></li>
+  <li data-ar="تركيب منظومات طاقة شمسية لفروع الجوف وصعدة." data-en="Installation of solar systems for Al-Jawf and Sa'dah branches."></li>
+  <li data-ar="منظومة طاقة شمسية لفرع الأمانة (32,160 مستفيد)." data-en="Solar system for the Amanat Al-Asimah branch (32,160 beneficiaries)."></li>
+  <li data-ar="مشروع المنظومة الشمسية لمخزن فرع حجة." data-en="Solar project for the storage facility of Hajjah branch."></li>
+  <li data-ar="منظومة طاقة شمسية لمركز صحي في شبوة (25,000 مستفيد)." data-en="Solar system for a health center in Shabwa (25,000 beneficiaries)."></li>
+  <li data-ar="بناء الدور الثاني + طاقة شمسية لمركز مبين (25,000 مستفيد)." data-en="Second floor construction + solar for Mabin center (25,000 beneficiaries)."></li>
+  <li data-ar="تأهيل مركز صحي عبس (12,000 مستفيد)." data-en="Rehabilitation of Abs health center (12,000 beneficiaries)."></li>
+  <li data-ar="تأهيل مركز سمارة- إب (20,000 مستفيد)." data-en="Rehabilitation of Samara Health Center in Ibb (20,000 beneficiaries)."></li>
+  <li data-ar="ترميم المركز الرئيسي للهلال الأحمر." data-en="Renovation of the main Red Crescent HQ."></li>
+  <li data-ar="قاعة تدريب بالدور الثاني في فرع أبين." data-en="Training hall built on second floor of Abyan branch."></li>
+</ul>
+
+<h4><span data-ar="ثانياً: دعم البنية التحتية الحكومية" data-en="2. Government Infrastructure Support"></span></h4>
+
+<h5><span data-ar="‌أ- مشاريع المياه والإصحاح البيئي" data-en="A- Water and Sanitation Projects"></span></h5>
+<ul>
+  <li data-ar="تأهيل منظومة طاقة شمسية لمياه الرجم - المحويت (35,000 مستفيد)." data-en="Solar system for Rajm Water Project in Al-Mahwit (35,000 beneficiaries)."></li>
+  <li data-ar="مشروع مياه الحضارم - تعز (4,500 مستفيد)." data-en="Al-Hadhram Water Project in Taiz (4,500 beneficiaries)."></li>
+  <li data-ar="تأهيل 4 آبار في المعافر - تعز (8,050 مستفيد)." data-en="Rehabilitation of 4 wells in Al-Ma'afar, Taiz (8,050 beneficiaries)."></li>
+  <li data-ar="مشروع وادي عرفات - تعز (5,000 مستفيد)." data-en="Wadi Arafat Water Project in Taiz (5,000 beneficiaries)."></li>
+  <li data-ar="نقاط توزيع مياه لبئر الكومية والحياد - حجة (8,400 مستفيد)." data-en="Water distribution points for Al-Kumiya and Al-Hayyad wells in Hajjah (8,400 beneficiaries)."></li>
+  <li data-ar="شبكة مياه عزلة القيلة بنجرة - حجة (6,420 مستفيد)." data-en="Water network for Al-Qeila isolation in Hajjah (6,420 beneficiaries)."></li>
+  <li data-ar="تأهيل بئر المجدر والرحبة - تعز (3,000 مستفيد)." data-en="Rehabilitation of Al-Majdar and Al-Rahbah wells in Taiz (3,000 beneficiaries)."></li>
+  <li data-ar="توزيع مياه جليبيب وعريوج - حجة (2,220 مستفيد)." data-en="Water distribution for Jalibib and Aroyouj in Hajjah (2,220 beneficiaries)."></li>
+</ul>
+
+<h5><span data-ar="‌ب- المشاريع الداعمة والبنية التحتية العامة" data-en="B- Support Projects & Public Infrastructure"></span></h5>
+<ul>
+  <li data-ar="مشروع تقليل الفيضانات في صنعاء وذمار (40,000 مستفيد)." data-en="Flood risk mitigation project in Sana'a and Dhamar (40,000 beneficiaries)."></li>
+  <li data-ar="بناء 500 وحدة مأوى للمتضررين من الفيضانات - حجة والحديدة (3,500 مستفيد)." data-en="500 shelter units for flood victims in Hajjah and Hodeidah (3,500 beneficiaries)."></li>
+  <li data-ar="مبادرة رصف طريق المبهاء - تعز (5,000 مستفيد)." data-en="Road paving initiative in Al-Mabahaa, Taiz (5,000 beneficiaries)."></li>
+  <li data-ar="جدران ساندة للطريق في الشراقي - حجة (15,000 مستفيد)." data-en="Retaining walls for Al-Shuraqi road in Hajjah (15,000 beneficiaries)."></li>
+  <li data-ar="تركيب حاوية عمليات مشتركة - صنعاء." data-en="Installation of joint operations container in Sana'a."></li>
+</ul>
+
+<h5><span data-ar="‌ج- بناء وتأهيل المرافق التعليمية" data-en="C- Construction & Rehabilitation of Educational Facilities"></span></h5>
+<ul>
+  <li data-ar="تأهيل مدرسة الشهيد محمود شبور - مبين، حجة (2,500 طالب/طالبة)." data-en="Rehabilitation of Al-Shaheed Mahmoud Shabour School in Mabyan, Hajjah (2,500 students)."></li>
+  <li data-ar="تأهيل مرافق المياه والصرف الصحي - مدرسة فاطمة الزهراء - صنعاء (2,000 طالب/طالبة)." data-en="Rehabilitation of WASH facilities at Fatima Al-Zahraa School in Sana'a (2,000 students)."></li>
+  <li data-ar="إضافة فصلين - مدرسة 11 فبراير - الشمايتين، تعز (200 طالب/طالبة)." data-en="Added 2 classrooms at 11 February School in Al-Shamayatayn, Taiz (200 students)."></li>
+  <li data-ar="إضافة فصلين - مدرسة 26 سبتمبر - الشمايتين، تعز (150 طالب/طالبة)." data-en="Added 2 classrooms at 26 September School in Al-Shamayatayn, Taiz (150 students)."></li>
+  <li data-ar="فصل + تشطيب 5 فصول - مدرسة شرشور، شبوة (5,130 طالب/طالبة)." data-en="Built 1 classroom and finished 5 at Sharshour School, Shabwa (5,130 students)."></li>
+</ul>
+
+<h5><span data-ar="‌د- مشاريع اللجنة الدولية التي يشرف عليها الهلال الأحمر" data-en="D- ICRC-Supported Projects Supervised by YRCS"></span></h5>
+<ul>
+  <li data-ar="متابعة خطوط الصرف الصحي - تعز." data-en="Supervision of sewer pipeline projects in Taiz."></li>
+  <li data-ar="تأهيل وحدة الفكيكة الصحية - مقبنة، تعز (5,000 مستفيد)." data-en="Rehabilitation of Al-Fakeeka Health Unit in Maqbana, Taiz (5,000 beneficiaries)."></li>
+  <li data-ar="حفر 3 آبار ارتوازية - مشروع مياه حيس، الحديدة (45,000 مستفيد)." data-en="Drilling of 3 artesian wells for Hays water project, Al-Hudaydah (45,000 beneficiaries)."></li>
+  <li data-ar="مشروع مركز الحزمه الصحي - مأرب." data-en="Al-Hazmah Health Center Project – Marib."></li>
+</ul>
+
+<h5><span data-ar="‌ه- أنشطة التدريب والتوعية" data-en="E- Training & Awareness Activities"></span></h5>
+<ul>
+  <li data-ar="دورات تدريبية WASH لمتطوعي فرعي حجة والتربة - تعز (20 مستفيد)." data-en="WASH training sessions for Hajjah & Al-Turba (Taiz) volunteers (20 participants)."></li>
+  <li data-ar="جلسات توعية ميدانية - حزم الجوف (بدأت بتدريب متطوعين ثم 40 مستفيد بالتدريب المجتمعي)." data-en="Field awareness activities in Al-Hazm, Al-Jawf, starting with volunteer training then community sessions (40 beneficiaries)."></li>
+</ul>
+
+    </div>
+  </section>
+</div>
+<div class="health-tab-content" id="wash-koica" role="tabpanel" aria-labelledby="wash-koica-btn">
+  <section class="wash-koica-section">
+    <div class="container">
+      <h3 data-ar="مشروع المياه من أجل السلام والحد من التوترات الناشئة من نقص المياه (KOICA)" 
+          data-en="Water for Peace and Conflict Reduction Project (KOICA)">
+      </h3>
+
+      <p data-ar="يُنفذ هذا المشروع بالشراكة مع الاتحاد الدولي لجمعيات الصليب الأحمر والهلال الأحمر (IFRC)، ويهدف إلى تعزيز الصمود المجتمعي في اليمن عبر التدخل في مجالات إدارة المياه والحد من التوترات الناشئة من نقص المياه وأيضا الحد من مخاطر الكوارث، والتأهب والاستجابة للأوبئة، والمشاركة المجتمعية. ويركز على تمكين المجتمعات والأطراف الفاعلة المحلية من حل المشكلات المتعلقة بالمياه والتنبؤ بالأزمات والتأهب لها والاستجابة والتعافي منها بفاعلية." 
+         data-en="This project, in partnership with the IFRC, aims to enhance community resilience in Yemen by addressing water management, conflict mitigation related to water scarcity, disaster risk reduction, epidemic preparedness and response, and community engagement. It focuses on enabling communities and local actors to resolve water-related issues, forecast crises, and respond and recover effectively.">
+      </p>
+
+      <ul>
+        <li data-ar="تأهيل واستبدال شبكة المياه في أحياء صنعاء القديمة (الطواشي، المدرسة، عقيل، الشهيدين) ومشروع توريد وتركيب واختبار مولد كهربائي ديزل بقدرة 320 كيلو وات لبئر M6R في خزانات مسيك -شعوب حيث يستفيد من هذا النشاط حوالي 152,000 مستفيد." 
+            data-en="Rehabilitation and replacement of water networks in Old Sana’a neighborhoods (Al-Tawashi, Al-Madrasa, Aqil, Al-Shahidain) and supply, install, and test a 320kW diesel generator for well M6R at Musayk tanks - Sha'oub. Approximately 152,000 people benefit from this activity.">
+        </li>
+        <li data-ar="استبدال وتأهيل شبكة المياه في جولة سنان وتركيب المنظومة الشمسية لبئر الجشاش في تعز ويستفيد من هذا النشاط ما يقارب 37,000 شخص." 
+            data-en="Rehabilitation and replacement of the water network in Joulat Sinan and installation of a solar system for Al-Jashash well in Taiz, benefiting about 37,000 people.">
+        </li>
+        <li data-ar="توريد أجهزة اختبار لمعامل مختبر المياه بالمؤسسة المحلية للمياه والصرف الصحي في تعز." 
+            data-en="Supply of testing equipment to the local water and sanitation laboratory in Taiz.">
+        </li>
+        <li data-ar="تشكيل لجان مجتمعية للمياه في صنعاء القديمة وتعز بمشاركة 20 شخص من المجتمع المحلي." 
+            data-en="Formation of community water committees in Old Sana’a and Taiz with 20 local community participants.">
+        </li>
+      </ul>
+    </div>
+  </section>
+</div>
         </div>
       </div>
     </section>
