--- a/index.html
+++ b/index.html
@@ -1367,6 +1367,33 @@
     </div>
   </section>
 </div>
+<div class="health-tab-content" id="wash-ppp" role="tabpanel" aria-labelledby="wash-ppp-btn">
+
+ <div class="wash-tab-content" id="wash-ppp" role="tabpanel" aria-labelledby="wash-ppp-btn">
+  <section class="wash-ppp-section">
+    <div class="container">
+      <h3 data-ar="مشروع الشراكة البرامجية التجريبية (PPP)" data-en="Pilot Programmatic Partnership Project (PPP)"></h3>
+      
+      <p data-ar="يهدف مشروع الشراكة البرامجية التجريبية ECHO PPP إلى الاستجابة للمخاطر والأزمات الإنسانية والصحية. حيث يتم تنفيذه في مجتمعات صنعاء وذمار وحضرموت ويركز المشروع على التدخلات في إدارة مخاطر الكوارث والتأهب للأوبئة والجوائح والاستجابة لها والتواصل بشأن المخاطر والمشاركة المجتمعية والمساءلة، كما يسعى المشروع على تعزيز دور المجتمعات والأفراد المعرضون للمخاطر، والجهات الفاعلة المحلية، من خلال اتخاذ إجراءات واستراتيجيات مبتكرة ومتكاملة، للتنبؤ بالأزمات الإنسانية والصحية والتأهب لها والاستجابة لها والتعافي منها." 
+         data-en="The ECHO PPP project aims to respond to humanitarian and health crises. Implemented in the communities of Sana'a, Dhamar, and Hadramout, it focuses on disaster risk management, epidemic preparedness and response, risk communication, community engagement, and accountability. The project empowers at-risk communities and local actors to adopt innovative and integrated strategies for crisis prediction, preparedness, response, and recovery.">
+      </p>
+
+      <p data-ar="خلال هذا العام نفذ المشروع الأنشطة التالية:" data-en="During this year, the project implemented the following activities:"></p>
+
+      <h4 data-ar="مشاريع المياه:" data-en="Water Projects:"></h4>
+      <ul>
+        <li data-ar="1. تنفيذ مشروع مياه السحيل بمدينة سيئون، يستفيد منه 37,000 شخص." data-en="1. Implementation of the Al-Sahil water project in Sayun, benefiting 37,000 people."></li>
+        <li data-ar="2. تنفيذ مشروع خزان ومياه هران بذمار، يستفيد منه 21,500 شخص." data-en="2. Construction of Horan water tank and system in Dhamar, benefiting 21,500 people."></li>
+        <li data-ar="3. إنشاء منظومة طاقة شمسية لمشروع مياه منطقة المنقب بأمانة العاصمة صنعاء، يستفيد منه 5,000 شخص." data-en="3. Installation of a solar system for the Al-Munqib water project in the Capital Municipality, benefiting 5,000 people."></li>
+        <li data-ar="4. تأهيل مرافق المياه والصرف الصحي بمدرسة النور في سيئون، لخدمة 2,000 طالب وطالبة." data-en="4. Rehabilitation of water and sanitation facilities at Al-Noor School in Sayun, serving 2,000 students."></li>
+        <li data-ar="5. تأهيل مرافق المياه والصرف الصحي بمدرسة عمر بن عبد العزيز في ذمار، لخدمة 2,500 طالب وطالبة." data-en="5. Rehabilitation of water and sanitation facilities at Omar Bin Abdulaziz School in Dhamar, serving 2,500 students."></li>
+        <li data-ar="6. تنفيذ برامج تدريبية وتوعوية في ثلاث مدارس بمحافظات صنعاء وسيئون وذمار، ضمن إطار مشاريع الشراكة بين القطاعين العام والخاص شارك فيها ما يقارب 6000 طالب وطالبة." 
+            data-en="6. Implementation of training and awareness programs in three schools across Sana'a, Sayun, and Dhamar as part of public-private partnership projects, with participation of around 6,000 students.">
+        </li>
+      </ul>
+    </div>
+  </section>
+</div>
         </div>
       </div>
     </section>
