--- a/index.html
+++ b/index.html
@@ -1407,6 +1407,10 @@
           <div class="chart-card">
             <h3 data-ar="مثال رسم بياني" data-en="Sample Chart"></h3>
             <canvas id="mainChart" height="120" aria-label="Main chart" role="img"></canvas>
+            <div class="chart-card"><canvas id="categoryChart"></canvas></div>
+        <div class="chart-card"><canvas id="donorChart"></canvas></div>
+        <div class="chart-card"><canvas id="activitiesChart"></canvas></div>
+        <div class="chart-card"><canvas id="ambulanceChart"></canvas></div>
           </div>
         </div>
       </div>
